@@ -548,6 +548,10 @@ class ApiQuery extends ApiBase {
 	public function shouldCheckMaxlag() {
 		return true;
 	}
+	
+	public function shouldCheckAvglag() {
+		return true;
+	}
 
 	public function getParamDescription() {
 		return array (
